# vulkan_rtx_clippy

./: .gitignore  CMakeLists.txt  README.md  build.sh  test_closesthit.spv  test_closesthit_fixed.spv  test_rt.rchit  test_rt.spv
.claude/: CLAUDE.md
include/: ClippyGeometry.h  ClippyRTXApp.h  ClippyUI.h  PostProcessing.h  RayTracingPipeline.h  Vertex.h  VulkanHelpers.h
reference/: CMakeLists.txt  clippy2025.html  clippyrtx.html  headers  shaders  vertexfragshaders
shaders/: closesthit.rchit  fragment.frag  fragment_advanced.frag  fragment_basic.frag  miss.rmiss  postprocess.frag  postprocess.vert  raygen.rgen  shadow.rmiss  vertex.vert  vertex_basic.vert  vertex_simple.vert
src/: ClippyGeometry.cpp  ClippyRTXApp.cpp  ClippyUI.cpp  PostProcessing.cpp  RayTracingPipeline.cpp  VulkanHelpers.cpp  VulkanPipelineImplementations.cpp  main.cpp
